// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test * in object get a.* 1`] = `
[
  {
    "arr": [
      {
        "d": {
          "e": {
            "arr": [
              {
                "f": true,
              },
              {
                "f": true,
              },
            ],
          },
        },
        "y": true,
      },
      {
        "d": {
          "e": {
            "arr": [
              {
                "f": false,
              },
              {
                "f": false,
              },
            ],
          },
        },
        "y": true,
      },
      {
        "d": {
          "e": {
            "arr": [
              {
                "f": false,
              },
              {
                "f": false,
              },
            ],
          },
        },
        "y": true,
      },
    ],
  },
  {
    "arr": [
      {
        "d": {
          "e": {
            "arr": [
              {
                "f": true,
              },
              {
                "f": true,
              },
            ],
          },
        },
        "z": true,
      },
      {
        "d": {
          "e": {
            "arr": [
              {
                "f": false,
              },
              {
                "f": false,
              },
            ],
          },
        },
        "z": true,
      },
      {
        "d": {
          "e": {
            "arr": [
              {
                "f": false,
              },
              {
                "f": false,
              },
            ],
          },
        },
        "z": true,
      },
    ],
  },
  {
    "arr": [
      {
        "d": {
          "e": {
            "arr": [
              {
                "f": true,
              },
              {
                "f": true,
              },
            ],
          },
        },
        "w": true,
      },
      {
        "d": {
          "e": {
            "arr": [
              {
                "f": false,
              },
              {
                "f": false,
              },
            ],
          },
        },
        "w": true,
      },
      {
        "d": {
          "e": {
            "arr": [
              {
                "f": false,
              },
              {
                "f": false,
              },
            ],
          },
        },
        "w": true,
      },
    ],
  },
  {
    "c": {
      "arr": [
        {
          "d": {
            "e": {
              "arr": [
                {
                  "f": true,
                },
                {
                  "f": true,
                },
              ],
            },
          },
          "x": true,
        },
        {
          "d": {
            "e": {
              "arr": [
                {
                  "f": false,
                },
                {
                  "f": false,
                },
              ],
            },
          },
        },
        {
          "d": {
            "e": {
              "arr": [
                {
                  "f": false,
                },
                {
                  "f": false,
                },
              ],
            },
          },
        },
      ],
    },
  },
]
`;

exports[`test * in object get a.*.c 1`] = `
[
  undefined,
  undefined,
  undefined,
  {
    "arr": [
      {
        "d": {
          "e": {
            "arr": [
              {
                "f": true,
              },
              {
                "f": true,
              },
            ],
          },
        },
        "x": true,
      },
      {
        "d": {
          "e": {
            "arr": [
              {
                "f": false,
              },
              {
                "f": false,
              },
            ],
          },
        },
      },
      {
        "d": {
          "e": {
            "arr": [
              {
                "f": false,
              },
              {
                "f": false,
              },
            ],
          },
        },
      },
    ],
  },
]
`;
